Migrating some syntax to Java 21